Expand Product model for apps and services
